--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>RedTetris</title>
     <link rel="icon" href="http://redpelicans.com/favicon.ico">
+    <link rel="stylesheet" href="https://bootswatch.com/4/pulse/bootstrap.min.css">
   </head>
   <body>
     <div id="tetris"></div>
